--- a/StayHomeChallenge.ipynb
+++ b/StayHomeChallenge.ipynb
@@ -102,6 +102,34 @@
     "            allsums.add(n_sum)\n",
     "        return True"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We use the fact that the max sum at any index will\n",
+    "# 1)either be the value at that index itself\n",
+    "# 2)or it would be the extension of the best subarray till the prev index added to the current idex's value\n",
+    "\n",
+    "class Solution(object):\n",
+    "    def maxSubArray(self, nums):\n",
+    "        '''Stay Home Challenge day 3, LeetCode 53'''\n",
+    "        \"\"\"\n",
+    "        :type nums: List[int]\n",
+    "        :rtype: int\n",
+    "        \"\"\"\n",
+    "        maxcurr = nums[0]\n",
+    "        maxglobal = nums[0]\n",
+    "        for i in range(1,len(nums)):\n",
+    "            maxcurr = max(nums[i], maxcurr + nums[i]) \n",
+    "            maxglobal = max(maxcurr, maxglobal)\n",
+    "            print(f\"maxcurr = {maxcurr}\")\n",
+    "            print(f\"maxglobal = {maxglobal}\")\n",
+    "            \n",
+    "        return maxglobal"
+   ]
   }
  ],
  "metadata": {
