--- a/StayHomeChallenge.ipynb
+++ b/StayHomeChallenge.ipynb
@@ -15,6 +15,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.7.4 (default, Aug  9 2019, 18:34:13) [MSC v.1915 64 bit (AMD64)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "print(sys.version)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [
@@ -129,6 +147,29 @@
     "            print(f\"maxglobal = {maxglobal}\")\n",
     "            \n",
     "        return maxglobal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def moveZeroes(self, nums: List[int]) -> None:\n",
+    "        \"\"\"\n",
+    "        Stay Home Challenge day 4\n",
+    "        Do not return anything, modify nums in-place instead.\n",
+    "        \"\"\"\n",
+    "        back = 0 # how much to go backwards while we meet a zero\n",
+    "        for i in range(len(nums)):\n",
+    "            i = i - back\n",
+    "            if nums[i] == 0:\n",
+    "                del nums[i]\n",
+    "                nums.append(0)\n",
+    "                back += 1\n",
+    "            \n",
+    "            "
    ]
   }
  ],
