--- a/StayHomeChallenge.ipynb
+++ b/StayHomeChallenge.ipynb
@@ -171,6 +171,44 @@
     "            \n",
     "            "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def maxProfit(self, prices: List[int]) -> int:\n",
+    "        '''Stay Home Challenge day 5'''\n",
+    "        low_p  = []  # lowest prices to buy\n",
+    "        high_p = []  # highest prices to sell\n",
+    "        \n",
+    "        for i in range(len(prices)):\n",
+    "            if i == 0:\n",
+    "                if len(prices) == 1:\n",
+    "                    continue # cannot buy or sell, there is only 1 price, continue loop = end loop\n",
+    "                elif prices[i] < prices[i+1]:\n",
+    "                    low_p.append(prices[i])\n",
+    "            \n",
+    "            elif i+1 == len(prices):\n",
+    "                if len(low_p) > len(high_p):\n",
+    "                    high_p.append(prices[i])\n",
+    "                \n",
+    "            else:\n",
+    "                print(prices[i-1], prices[i], prices[i+1])\n",
+    "                if (prices[i] < prices[i+1]) & (prices[i] <= prices[i-1]) & (len(low_p) == len(high_p)):\n",
+    "                    print(len(low_p) == len(high_p))\n",
+    "                    low_p.append(prices[i])\n",
+    "                elif (prices[i] > prices[i+1]) & (prices[i] >= prices[i-1]) & (len(low_p) > len(high_p)):\n",
+    "                    high_p.append(prices[i])\n",
+    "                else:\n",
+    "                    print('continue')\n",
+    "                    continue\n",
+    "        print (\"I want to buy: \", low_p, \"I want to sell: \", high_p)\n",
+    "        return sum(high_p) - sum(low_p)\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
